--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Service\TmdbApiService:
+        arguments:
+            $apiBaseUrl: '%env(API_BASE_URL)%'
+            $apiKey: '%env(API_KEY)%'
