--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    api_base_url: '%env(API_BASE_URL)%'
+    api_key: '%env(API_KEY)%'
 
 services:
     # default configuration for services in *this* file
